# pterocord

./: .dockerignore  .env.template  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
src/: config.rs  event_handlers.rs  main.rs  server.rs  server_config.rs  types.rs
src/commands/: server.rs
