[package]
name = "pterocord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.84"
poise = "0.6.1"
pterodactyl_api = "0.1.1"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
