[package]
name = "pterocord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.84"
poise = "0.6.1"
pterodactyl_api = "0.1.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.1", features = ["model"] }
tokio = { version = "1.37.0", features = ["full"] }
