[package]
name = "pterocord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.84"
async-tungstenite = { version = "0.20", features = ["tokio-runtime", "tokio-native-tls"] }
futures = "0.3.30"
local-ip-address = "0.6.1"
poise = "0.6.1"
pterodactyl_api = {version = "0.1.1", features = ["websocket"]}
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.1", features = ["model"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
